--- a/orderweb/WebContent/public/OrderForm.htm
+++ b/orderweb/WebContent/public/OrderForm.htm
@@ -72,7 +72,7 @@
 <script>
 	var viewModel; //bound JSON object
 	function getRootURI() {
-		return "../rest/order/";
+		return "../rest/orders/";
 	}
 	function initData(data) {
 		$("#orderDate").width(125).kendoDatePicker({
